<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/editLay1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/editLay2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_title" />

            <EditText
                android:id="@+id/add_etTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_title" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_mood" />

            <ImageButton
                android:id="@+id/ib_mood1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/mood_1"
                android:scaleType="centerCrop"/>

            <ImageButton
                android:id="@+id/ib_mood2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/mood_2"
                android:scaleType="centerCrop"/>

            <ImageButton
                android:id="@+id/ib_mood3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/mood_3"
                android:scaleType="centerCrop"/>

            <ImageButton
                android:id="@+id/ib_mood4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/mood_4"
                android:scaleType="centerCrop"/>

            <ImageButton
                android:id="@+id/ib_mood5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/mood_5"
                android:scaleType="centerCrop"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_date" />

            <EditText
                android:id="@+id/etDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_date"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_text"
                android:layout_gravity="top" />

            <ImageButton
                android:id="@+id/ib_mic"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_mic"
                android:padding="8dp"
            />

            <EditText
                android:id="@+id/edit_etText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_text" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/editLay2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="30dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/edit_btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel" />

        <CheckBox
            android:id="@+id/edit_ckbFavourite"
            android:button="@drawable/custom_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/edit_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
